--- a/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
@@ -698,8 +698,8 @@
  POL_grippen_desc: "鹰狮是一款来自瑞典的轻型战斗机，能够高效执行任务。我们需要这些。"
  POL_f16_c_d: "F-16 C/D"
  POL_f16_c_d_desc: "多用途F-16在战场上和夺取制空权时都将发挥作用。"
- POL_mirage_2000: "幻影F1"
- POL_mirage_2000_desc: "法国幻影F1战斗机是现代飞机比 20 世纪飞机无与伦比的优越性的另一个例子。这对于与敌方单位作战非常有用。"
+ POL_mirage_2000: "幻影2000D"
+ POL_mirage_2000_desc: "法国幻影2000D战斗机是现代飞机比20世纪飞机拥有无与伦比的优越性的另一个例子。 这对于与敌方单位作战非常有用。"
  POL_kruk: "克鲁克"
  POL_kruk_desc: "除了飞机之外，我们还要重点生产直升机。它们速度很快，可以轻松降落在飞机无法降落的地方。他们可以携带特殊单位。"
  POL_apache_guardian: "阿帕奇卫士"
