--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -60,6 +60,8 @@
  BLR_peleng_union_state_desc: "[SOV.GetFlag]Union state company for the development and production of optoelectronic products for military and civilian purposes, the leading company in the industry in the Union state"
  BLR_peacerota_idea: "Peacekeeping Contingent"
  BLR_Foreign_legion_idea: "Foreign Legion"
+ BLR_sso_idea: "Special Operations Forces"
+ BLR_ter_orobona_idea: "Territorial Defence"
  BLR_mzkt_contract: "Contract With MZKT"
  BLR_mzkt_contract_desc: "Minsk Wheeled Tractor Plant, MZKT is an enterprise specializing in the production of road and off—road heavy-duty vehicles, trailed vehicles, special wheeled chassis for the installation of equipment for enterprises of construction, oil and gas and machine-building complexes. a state-owned enterprise under the jurisdiction of the State Military-Industrial Committee of the Republic of Belarus"
  BLR_mzkt_contract_another: "Contract With MZKT"
@@ -118,42 +120,16 @@
  BLR_50_air_base_desc: "The 50th Mixed Order of the Red Star aviation base has not only a heroic past, but also keeps up with the times with dignity. Its pilots open state military parades, win and become prize–winners in international army games, but the main thing is that aviators reliably ensure peace and stability on Belarusian soil"
  BLR_land_forces: "The Land Forces of Belarus"
  BLR_land_forces_desc: "The Land Forces of Belarus is one of the types of the armed forces of Belarus. Designed to solve the tasks of repelling the enemy's blows and defeating him in the event of unleashing aggression."
- BLR_kvo_army: "Mixed Type Army"
- BLR_kvo_army_desc: "We will take the best of both doctrines"
- BLR_prof_army: "Professional Army"
- BLR_prof_army_desc: "We will create a strong and powerful army"
  BLR_sso: "Creation of Special Operations Forces"
  BLR_sso_desc: "The Special Operations Forces of the Armed Forces of the Republic of Belarus, a highly mobile branch of the Armed Forces of the Republic of Belarus, are the successor to the Airborne Forces of the USSR and the special forces of the GRU of the USSR in the Republic of Belarus. Main tasks: counter-sabotage activities, intelligence, combating illegal armed groups, performing various tasks using special methods in order to end the armed conflict against the Republic of Belarus. They act as one of the main elements of strategic deterrence."
- BLR_mass_army: "Large Conscription Army"
- BLR_mass_army_desc: "Our strength is in quantity"
- BLR_army1: "2 Years Of Service In The Army"
- BLR_army1_desc: "2 years will make any civilian an excellent soldier"
- BLR_politrucks: "Expanding The Powers Of Political Officers"
- BLR_politrucks_desc: "Political officers in Soviet times had great powers in the army - we will return this practice"
- BLR_contract: "Massive Recruitment Campaign"
- BLR_contract_desc: "We will conduct a massive recruitment campaign for the army"
- BLR_otmena: "Cancellation Of The Draft For People With Higher Education"
- BLR_otmena_desc: "Higher education will no longer be a reprieve from the army"
  BLR_trans_army: "Creation of Transport Troops"
  BLR_trans_army_desc: "The Belarusian Transport Troops as is the service branch of the Armed Forces of Belarus. It is responsible for the movement of personnel and material by truck, rail, and air, and is designed to carry the tasks of the transport support of the military formations from other service branches across the country."
  BLR_uniform_army: "Adoption of a New Military Uniform"
  BLR_uniform_army_desc: "Our soldiers wear outdated uniforms - we need to fix this"
- BLR_exer_army: "Conduct General Field Exercises"
- BLR_exer_army_desc: "Our troops, in view of the introduction of new branches of the armed forces, need exercises"
- BLR_sapers: "Expanding The Training Of Combat Sappers"
- BLR_sapers_desc: "We will strengthen the sapper training program for future wars so that enemy mines are not a hindrance to us"
- BLR_arta: "Artillery Is The God of War"
- BLR_arta_desc: "The Soviet doctrine of artillery suppression will perfectly suit our army"
  BLR_sso_expand: "Expansion of Special Operations Forces"
  BLR_sso_expand_desc: "We will expand the financing of special operations forces to form the best special forces in the world!"
- BLR_ptrk_commands: "Preparation of ATGM Teams"
- BLR_ptrk_commands_desc: "ATGM is the main weapon of the war of the future, we will strengthen the training of detachments with ATGMs"
- BLR_munshtra: "Constant Drill"
- BLR_munshtra_desc: "Regular exercises designed to establish the interaction of the branches of the armed forces"
- BLR_mechanize: "Mechanization of The Army"
- BLR_mechanize_desc: "Mechanized troops are strong troops. The more armored personnel carriers, IFVs and more in the army, the more chances there are to break through to the enemy"
- BLR_unification: "Modern Army"
- BLR_unification_desc: "Our army will be the most modern"
+ BLR_end_reform: "Complete The Reform Of The Army"
+ BLR_end_reform_desc: "We will complete the reforms of our army and now it will meet modern standards"
  BLR_defence_strategy: "Defensive Strategy"
  BLR_defence_strategy_desc: "Our small country can only count on the enemy not to attack it, but if it does, then we must be ready to defend ourselves"
  BLR_east_defence: "Defense in the East"
@@ -957,8 +933,8 @@
  BLR_nazbol_take_russia_desc: "Finally! Russia is free!"
  BLR_Taler_ruble: "Belarusian Taler"
  BLR_Taler_ruble_desc: "We must get rid of the ruble completely, replacing it with our new currency."
- BLR_National_science: "National Science"
- BLR_National_science_desc: "We will invest in our science and education to create a powerful and independent state."
+ BLR_National_science: "Scientific And Economic Growth"
+ BLR_National_science_desc: "We will begin to develop our own science and economy as an independent state."
  BLR_Delete_KGB: "Dissolve the KGB"
  BLR_Delete_KGB_desc: "The KGB should be abolished and replaced by a new structure."
  BLR_Reform_Police: "Police Reform"
