--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -2216,7 +2216,8 @@
 
  belarus_another.52.t: "Jeans Revolution"
  belarus_another.52.d: "The people of Belarus have come out to protest against the legitimate government and demand the resignation of the entire government. I hope we have prepared well for this?"
- belarus_another.52.a: "What awaits us"
+ belarus_another.52.a: "Suppress The Protests"
+ belarus_another.52.b: "Try To Negotiate"
 
  belarus_another.53.t: "The National Bolsheviks Seized Power in Russia"
  belarus_another.53.d: "Our loyal supporters were finally able to seize power in Russia. The Kremlin is ours now. Our leader is ready to lead Russia"
@@ -2225,6 +2226,24 @@
  belarus_another.54.t: "Joining Russia"
  belarus_another.54.d: "Finally, Belarus is returning home. Now we will be part of a great country, sacrificing our autonomy, but did we need it?."
  belarus_another.54.a: "Finally!."
+
+ belarus_another.55.t: "Jeans Revolution"
+ belarus_another.55.d: "Protests are gaining momentum in Belarus that the Belarusian government cannot suppress, maybe we should step in and save their government?"
+ belarus_another.55.a: "We Will Send Our Specialists"
+ belarus_another.55.b: "Let's Not Interfere"
+
+ belarus_another.56.t: "Jeans Revolution"
+ belarus_another.56.d: "Russia sent its specialists to us and together we were able to suppress the protests!"
+ belarus_another.56.a: "Thank you Russia"
+
+ belarus_another.57.t: "Jeans Revolution"
+ belarus_another.57.d: "We secretly asked the Russian government for help and they refused us, which leaves us alone with the revolutionary movement."
+ belarus_another.57.a: "God Help Us"
+
+ belarus_another.58.t: "Jeans Revolution"
+ belarus_another.58.d: "The protests are gaining momentum, some administrative buildings have already been seized, as well as riots are already beginning in other cities, in addition, some of the generals have defected to the rebels, what should we do?."
+ belarus_another.58.a: "We Will Fight To The End!"
+ belarus_another.58.b: "We Will Peacefully Surrender Power"
 
  belarus_GDL.1.t: "Belarus Wants to Rule Our Country."
  belarus_GDL.1.d: "Pro-Belarusian nationalists have a great influence in our country, so the Belarusian authorities decided to give us an ultimatum - to allow them into the government or face the consequences. What do we say to that?"
