--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,6 +52,7 @@ v1.10.0
   - Integrating a nation through Formable Nations will grant access to generals
   - Annexing through puppet influence/annex will now grant access to the integrated nation
   - Iceland and Greenland can now form the formable "Unite the Nordic People"
+  - Merge MD PLA general resetting submod
 
  Localization:
   - Added missing loc for tech categories research speed bonus
