updated a small tooltip

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -59,6 +59,7 @@ v1.10.0
   - Rewrote a number of the tooltips available in the European Union content focusing on usability
   - Removed a large number of unused localization from the European Union files
   - Add Simplified Chinese localization support
+  - Added a small tooltip improvement to the "hide/show" money button
 
  Map:
   - Revamp Iran region
