--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
  flat_productivity_change_effect_TT: "§YProductivity§!: [?temp_productivity_change|3+]\n"
 
- HIDE_MONEY_TOOLTIP: "Click to hide money interface"
- SHOW_MONEY_TOOLTIP: "Click to show money interface"
+ HIDE_MONEY_TOOLTIP: "£left_mouse_texticon §YL Click§! to hide the money interface."
+ SHOW_MONEY_TOOLTIP: "£left_mouse_texticon §YL Click§! to show the money interface."
  TREASURY_TOOLTIP: "We have $[?treasury] §Hbillion§! in the treasury.\nOur weekly balance is $[?treasury_rate|+3] §Hbillion§!."
- TREASURY_TOOLTIP_DELAYED: "Our treasury reflects the amount of money we have available to spend, and can be used for purchases and investments. If the treasury goes into the red, debt will automatically be issued weekly to keep it positive."
+ TREASURY_TOOLTIP_DELAYED: "Our treasury reflects the amount of money we have available to spend, and can be used for purchases and investments. If the treasury goes into the red, debt will automatically be issued weekly to keep it positive.\n\n£left_mouse_texticon §YL Click§! will open the §YEconomic Preview§! screen."
  AC_TREASURY_TOOLTIP: "We have $[?ROOT.treasury] §Hbillion§! in the treasury.\nOur weekly balance is $[?treasury_rate|+] §Hbillion§!."
- AC_TREASURY_TOOLTIP_DELAYED: "The money in our treasury is the money we can spend. It is used for purchases and investments. If it turns negative, debt will automatically be taken to keep it positive."
+ AC_TREASURY_TOOLTIP_DELAYED: "The money in our treasury is the money we can spend. It is used for purchases and investments. If it turns negative, debt will automatically be taken to keep it positive.\n"
  INT_INVESTMENTS_TOOLTIP: "We have $[?int_investments] §Hbillion§! in international investments.\nWe will gain [?roi_rate|%0] §HReturn on Investment§! on this each year, giving us weekly [int_investment_rate_color] §Hbillion§! in §Hinvestment income§! into the treasury from this.\nCurrent Active §YInvestment Projects§!: [?active_projects]/15"
  INT_INVESTMENTS_TOOLTIP_DELAYED: "£shift_texticon  + £left_mouse_texticon §YShift L Click§! to enable/disable automatic reinvestment of §Hinvestment income§! into our §YInternational Investments§! (When the reinvestment is enabled the §YInternational Investments§! §Gincome§! value will turn yellow in the Economic Preview screen.)\n\n£GFX_ctrl_texticon + £left_mouse_texticon §YControl L Click§! to Enable/Disable automatic investment rejection. This means that you will automatically reject ALL incoming investment offers.\n\n £GFX_right_mouse_texticon §YR Click§! to sell off $1 billion in foreign investments. Only 60% of the sum can be recovered. £GFX_ctrl_texticon §YCtrl§! (10x) or £shift_texticon §YShift§!(100x) to increase the amount sold.\n\n[int_reinvestment_toggled]\n[int_auto_rejection_toggled]"
  AC_INT_INVESTMENTS_TOOLTIP: "We have $[?ROOT.int_investments] §Hbillion§! in international investments.\nWe weekly earn $[?ROOT.int_investments_rate] §Hbillion§! in §Hinvestment income§! into the treasury from this."
