--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1017,12 +1017,12 @@
  china.18.a: "Let the years be more brilliant and life more exciting."
  
  china.19.t: "China Offers SAR status"
- china.19.d: "Our friends in China have offered to draw closer in regards to let our landlocked country join a much bigger family, recover the glory and share the great China market. Sure, it would give up Mongolian independence, but that is but a small price to pay, right?"
+ china.19.d: "Our friends in China have offered to draw closer in regards to let our landlocked country join a much bigger family, recover the glory and share the great China market. Sure, there will be a slight adjustment to Mongolia's current national status, but for the huge benefits, this price is nothing, right?"
  china.19.a: "Now we are one!"
  china.19.b: "Resist and bite!"
  
- china.20.t: "Mongolian Resists Our Demand!"
- china.20.d: "Mongolia has had the audacity to resist China`s wishes for a reunification! We have to prepare an answer."
+ china.20.t: "Outer Mongolian Resists Our Demand!"
+ china.20.d: "Outer Mongolia actually intends to stop the process of China's reunification! We have to prepare an answer."
  china.20.a: "Take action now!"
  china.20.b: "Still need some preparation."
  
