--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1022,7 +1022,7 @@
  china.19.b: "Resist and bite!"
  
  china.20.t: "Outer Mongolian Resists Our Demand!"
- china.20.d: "Outer Mongolia actually intends to stop the process of China's reunification! We have to prepare an answer."
+ china.20.d: "Outer Mongolia actually intends to stop the process of China's reunification! The easy way or the hard way? A special military operation seems inevitable."
  china.20.a: "Take action now!"
  china.20.b: "Still need some preparation."
  
@@ -1189,7 +1189,7 @@
  china.55.b: "The entire Taiwan area finally returned to the embrace of the motherland."
  china.55.c: "There are other plan."
  
- china.56.t: "The War Over Outer Mongolia End!"
+ china.56.t: "The Special Military Operation Over Outer Mongolia End!"
  china.56.d: "The Battle of the Outer Mongolia is coming to an end. Facing the fierce southern offensive, the Ulaanbaatar authorities were defeated without any suspense, and the Mongolian plateau ushered in its former master. If planning the future of Outer Mongolia has become the current top priority, what are our choices?"
  china.56.a: "Outer Mongolia SAR was established today"
  china.56.b: "The entire Outer Mongolia region finally returned to the embrace of the motherland."
