--- a/Changelog.txt
+++ b/Changelog.txt
@@ -38,6 +38,7 @@ v1.10.0
   - Fixed a Singaporean logic error in the focus tree
   - Fixed a broken European Parliament icon
   - Fixed Black Sea country trade path dead lock error
+  - Fixed Canada getting a free bumping to Neo Imperialism
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina
