Changed the order of the Chinese airplane models to match the reality.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -92,6 +92,7 @@ v1.10.0
  - Added M60 Tank Model for Turkey (Geo Integration)
  - Added Armenian BMP2 Model (Geo Integration)
  - Shrunk the size of some models
+ - Changed the order of the Chinese aircraft models to match the reality
 
 v1.9.6
 
