--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -760,7 +760,7 @@
  STATE_759: "Newfoundland and Labrador"
  STATE_760: "Nova Scotia"
  STATE_761: "New Brunswick"
- STATE_762: "Quebec"
+ STATE_762: "Eastern Quebec"
  STATE_763: "Ontario"
  STATE_764: "Maine"
  STATE_765: "New Hampshire"
@@ -1157,3 +1157,7 @@
  STATE_1156: "Taichung"
  STATE_1157: "Tainan"
  STATE_1158: "Penghu"
+ STATE_1159: "Western Quebec"
+ STATE_1160: "Ungava"
+ STATE_1161: "Kitaa"
+ STATE_1162: "Tunu"
