--- a/Changelog.txt
+++ b/Changelog.txt
@@ -53,6 +53,8 @@ v1.10.0
   - Integrating a nation through Formable Nations will grant access to generals
   - Annexing through puppet influence/annex will now grant access to the integrated nation
   - Iceland and Greenland can now form the formable "Unite the Nordic People"
+  - Added extra tags which AI will use to divide Russia in case it loses war
+  - Added mechanic to reunify russia in case it becomes divided - expect it to come to other nations as well
   - Merge MD PLA general resetting submod
 
  Localization:
