--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -1847,7 +1847,7 @@
  SOV_navalny_inner11_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §R-15.00%§!\n\n"
  SOV_navalny_inner12_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$population_tax_income_multiplier_modifier$: §G+10.00%§!\n$tax_rate_change_multiplier_modifier$: §G-10.00%§!\n$econ_cycle_upg_cost_multiplier_modifier$: §G-10.00%§!\n$MODIFIER_STABILITY_FACTOR$: §R-9.00%§!\n\n"
  SOV_navalny_inner13_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$democratic_drift$: §R-0.01§!\n$MODIFIER_war_support_modifier$: §G+3.00%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+2.00%§!\n\n"
- 
+
  #Yavlinsky
  SOV_navalny_inner_start2_tt: "Add §Y$SOV_navalny_inner_modifier$§!, which grants:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5%§!\n$MODIFIER_STABILITY_FACTOR$: §R-4.00%§!\n\n"
  SOV_navalny_inner15_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$democratic_drift$: §G+0.02§!\n\n"
@@ -2200,7 +2200,7 @@
  SOV_500_days_fase_two: "Phase 2 of Economic Reforms"
  SOV_500_days_fase_three: "Phase 3 of Economic Reforms"
  SOV_500_days_fase_four: "Phase 4 of Economic Reforms"
- 
+
 
  ## NPP Events
  russia.26.t: "National Projects Initiative is failed!"
@@ -4355,7 +4355,7 @@
  SOV_borya_ded: "Boris Yeltsin Died"
  SOV_svetov: "Real Russian Libertarianism"
  SOV_svetov_desc: "Finally, the era of true Russian libertarianism has come"
- 
+
  ##Kasyanov Branch
  SOV_parnas: "PARNAS"
  SOV_parnas_desc: "The People's Freedom Party, often known by its short form PARNAS, and the Republican Party of Russia was a liberal-democratic political party in Russia. It was one of the first opposition parties founded in the final years of the Soviet Union."
@@ -4406,15 +4406,15 @@
 
  SOV_FSS_intelligence: "Federal Security Service of the Russian Federation"
  SOV_FCS_intelligence: "Federal Counterintelligence Service of the Russian Federation"
- 
+
  SOV_fcs: "FCS"
  SOV_fcs1: "FCS"
- 
+
  SOV_idea_true_russian_people_power: "True Russian People Power"
  SOV_idea_true_russian_people_power_desc: "As a result of the reforms led by Mikhail Kasyanov, Russia has undergone a period of political transformation aimed at establishing true people's power."
  SOV_idea_free_economic_zone: "Free Economic Zone"
  SOV_idea_free_economic_zone_desc: "We should abandon the course of closing the Kaliningrad region and turn it into a bridgehead for cooperation between Russia and the EU. Ensure the development of the region as a fully free economic zone."
- 
+
  SOV_elected_kasyanov_TT1: "§RThis focus tree will be blocked after youn swap to Nemtsov's's tree§!"
  SOV_elected_kasyanov_TT: "§YWe've already chosen Kasyanov's party§!"
  SOV_elected_nemtsov_TT1: "§RRThis focus tree will be blocked after youn swap to Kasyanov's's tree§!"
@@ -4442,39 +4442,39 @@
  SOV_from_center_increase_productivity_amur: "Will §GIncrease§! in §YAmur§! Productivity by §G10§!"
  SOV_from_center_increase_productivity_kostroma: "Will §GIncrease§! in §YKostroma§! Productivity by §G10§!"
  SOV_from_center_increase_productivity_chelyabinsk: "Will §GIncrease§! in §YChelyabinsk§! Productivity by §G10§!"
- 
+
  SOV_postsovok_TT: "We will gain §Yinfluence§! in all §Ypost-Soviet republics§!"
  SOV_postfederation_TT: "We will gain §Yinfluence§! in all §Ypost-Federal republics§!"
- 
+
  sov_kasyanov.1.t: "Independence of Ichkeria"
  sov_kasyanov.1.d: "In the context of Russia's democratic transformation and the desire for peace, the Russian government took the bold step of granting Chechnya formal independence.\n\nAfter long negotiations and diplomatic efforts, both sides agreed to this historic compromise. Russia recognized Chechnya's right to independence, opening a new page in relations between the two entities. This act became a symbol of the desire for peace and dialog in a region previously plagued by tensions and hostilities."
  sov_kasyanov.1.a: "Establish diplomatic relations"
- 
+
  sov_kasyanov.2.t: "Question of ownership of the Kuril Islands"
  sov_kasyanov.2.d: "After the Second World War, all the Kuril Islands were included in the USSR and in the future Russia, but the ownership of the islands of Iturup, Kunashir, Shikotan and the Habomai group of islands is disputed by us, we consider and considered them to be an occupied part of the country. Today, Russia has initiated negotiations with us on this issue. What will be our response?"
  sov_kasyanov.2.a: "The Kurils have always been Japanese"
  sov_kasyanov.2.b: "All right, let them take them"
- 
+
  sov_kasyanov.3.t: "The Japanese refused to withdraw their claims to the Kurils"
  sov_kasyanov.3.d: "Recently, there have been talks between us and Japan. Their outcome is as follows: the Japanese do not change their position and still consider the Kurils to be their territory."
  sov_kasyanov.3.a: "Okay, we won't hold the Kurils by force, we'll give them away!"
  sov_kasyanov.3.b: "To hell with them."
  sov_kasyanov.3.c: "They'll pay for it"
- 
+
  sov_kasyanov.4.t: "The Japanese have agreed to no longer claim the Kurils"
  sov_kasyanov.4.d: "Recently, there have been talks between us and Japan. They agreed to withdraw their claims from the Kurils."
  sov_kasyanov.4.a: "We always knew the Japanese were good people"
- 
+
  sov_kasyanov.5.t: "[FROM.GetNameWithFlag] invites us into an alliance"
  sov_kasyanov.5.d: "[FROM.GetNameWithFlag] invites us to join their Free Independent Alliance designed to defend democracy in the former Soviet Union and around the world. Together with [FROM.GetNameWithFlag], we can strengthen our defense, develop our economy and achieve geopolitical influence. Refusing the invitation means missing the opportunity to gain support in case of conflict and finding ourselves on a mission without reliable allies. The decision awaits us: to join the alliance and cooperate or to go our own way?"
  sov_kasyanov.5.a: "All right, we'll take them up on their offer"
  sov_kasyanov.5.b: "No, we don't have time for that right now"
- 
+
  sov_kasyanov.6.t: "[FROM.GetNameWithFlag] invites us into an alliance"
  sov_kasyanov.6.d: "[FROM.GetNameWithFlag] invites us to join their Free Independent Alliance designed to defend democracy in the former Soviet Union and around the world. Together with [FROM.GetNameWithFlag], we can strengthen our defense, develop our economy and achieve geopolitical influence. Refusing the invitation means missing the opportunity to gain support in case of conflict and finding ourselves on a mission without reliable allies. The decision awaits us: to join the alliance and cooperate or to go our own way?"
  sov_kasyanov.6.a: "All right, we'll take them up on their offer"
  sov_kasyanov.6.b: "No, we don't have time for that right now"
- 
+
  sov_kasyanov.7.t: "[FROM.GetNameWithFlag] invites us into an alliance"
  sov_kasyanov.7.d: "[FROM.GetNameWithFlag] invites us to join their Free Independent Alliance designed to defend democracy in the former Soviet Union and around the world. Together with [FROM.GetNameWithFlag], we can strengthen our defense, develop our economy and achieve geopolitical influence. Refusing the invitation means missing the opportunity to gain support in case of conflict and finding ourselves on a mission without reliable allies. The decision awaits us: to join the alliance and cooperate or to go our own way?"
  sov_kasyanov.7.a: "All right, we'll take them up on their offer"
@@ -4484,21 +4484,21 @@
  sov_kasyanov.8.d: "[FROM.GetNameWithFlag] invites us to join their Free Independent Alliance designed to defend democracy in the former Soviet Union and around the world. Together with [FROM.GetNameWithFlag], we can strengthen our defense, develop our economy and achieve geopolitical influence. Refusing the invitation means missing the opportunity to gain support in case of conflict and finding ourselves on a mission without reliable allies. The decision awaits us: to join the alliance and cooperate or to go our own way?"
  sov_kasyanov.8.a: "All right, we'll take them up on their offer"
  sov_kasyanov.8.b: "No, we don't have time for that right now"
- 
+
  sov_kasyanov.9.t: "[FROM.GetNameWithFlag] invites us into an alliance"
  sov_kasyanov.9.d: "[FROM.GetNameWithFlag] invites us to join their Free Independent Alliance designed to defend democracy in the former Soviet Union and around the world. Together with [FROM.GetNameWithFlag], we can strengthen our defense, develop our economy and achieve geopolitical influence. Refusing the invitation means missing the opportunity to gain support in case of conflict and finding ourselves on a mission without reliable allies. The decision awaits us: to join the alliance and cooperate or to go our own way?"
  sov_kasyanov.9.a: "All right, we'll take them up on their offer"
  sov_kasyanov.9.b: "No, we don't have time for that right now"
- 
+
  sov_kasyanov.10.t: "[FROM.GetNameWithFlag] agree to join our alliance"
  sov_kasyanov.10.d: "Following our recent invitation to our Free Independent Alliance, [FROM.GetNameWithFlag] have accepted the offer! They are now under our protection!"
  sov_kasyanov.10.a: "Hooray!"
- 
+
  sov_kasyanov.11.t: "[FROM.GetNameWithFlag] have refused to join our alliance"
  sov_kasyanov.11.d: "Following our recent invitation to our Free Independent Alliance, [FROM.GetNameWithFlag] declined the offer..."
  sov_kasyanov.11.a: "Okay, that's their choice..."
  sov_kasyanov.11.b: "No! We're not just gonna let this go, we're gonna take them by force!!!"
- 
+
  SOV_from_center_category: "From Center to Regions!"
  SOV_from_center_category_desc: "For ten years Russia has in fact turned into a unitary state, the subjects of which bear heavy financial obligations to Moscow, but are deprived of their rights - to a proportionate share of expenditures in proportion to their real contribution to the economy, to development, to historical and cultural diversity. We advocate the immediate dismantling of the notorious and harmful for Russia "vertical of power"."
  SOV_from_center_1: "Transfer §GMoney§! from the §YMoscow§! Budget to §YIrkutsk§! Budget"
@@ -4780,7 +4780,7 @@
  russia.86.d: "Since our countries have recently become noticeably closer and many quarrels have been forgotten, we have the opportunity to sign a mutual defense pact to achieve universal peace for our countries"
  russia.86.o1: "It's the best decision we can make"
  russia.86.o2: "There can only be one superpower in the world and that's us!"
- 
+
  russia.89.t: "Nuclear deal"
  russia.89.d: "Russia proposes that we sign a treaty on strategic nuclear security in the region. This will allow us to strengthen our common positions and to ward off nuclear war in this world."
  russia.89.o1: "We agree"
@@ -4901,7 +4901,7 @@
  russia.88.o1: "Alas"
 
  russia.82.t: "Our offer was rejected"
- russia.82.d: "Unfortunately they declined our offer" 
+ russia.82.d: "Unfortunately they declined our offer"
  russia.82.o1: "Alas"
  russia.98.t: "Matters of the Party"
  russia.98.d: "With the inauguration of Alexei Navalny and the first days of his rule, the differences between the policies of the president himself and the Yabloko party, of which Navalny is a member, became apparent. Although Navalny's and Yabloko's programs are very similar, the party leadership still finds reasons for disputes. There are rumors that Alexei Navalny may leave the party and create his own organization. Is the strife between the party and the president really that strong?"
@@ -4987,5 +4987,60 @@
  SOV_mobilise_sobr: "§YMobilize§! the §RSOBR§!"
  SOV_help_with_sheriff: "§YRussia§! has deal with §Rthe Sheriff§!"
  SOV_anti_sheriff: "Liberate §YTransnistria§! from the influence of §Rthe Sheriff§!"
+ sov_reunification_category: "Unification Of Russia"
+ sov_reunification_category_desc: "The outcome of the war saw Russia fractionalized, with dust settled, we must endure the hardships of reunification.\nCurrent unification progress: [?THIS.reunification_progress]"
+ start_talks_with_karelia: "Start unification talks with [KAE.GetNamewithFlag]"
+ start_talks_with_don: "Start unification talks with [DON.GetNamewithFlag]"
+ start_talks_with_csb: "Start unification talks with [CSB.GetNamewithFlag]"
+ start_talks_with_syberia: "Start unification talks with [SYB.GetNamewithFlag]"
+ free_kae: "Negotiate release of [KAE.GetNamewithFlag]"
+ free_don: "Negotiate release of [DON.GetNamewithFlag]"
+ free_csb: "Negotiate release of [CSB.GetNamewithFlag]"
+ free_syb: "Negotiate release of [SYB.GetNamewithFlag]"
+ SOV_reunification_mission: "Unification roundtable talks"
+ sov_dissolution.1.t: "Regionalism on the rise"
+ sov_dissolution.1.d: "With recent war taking a bad turn, more state actors are starting to act independent. It is a matter of time until this spirals out of control."
+ sov_dissolution.1.a: "Impossible"
+ sov_dissolution.2.t: "Part of Russia Reintegrated"
+ sov_dissolution.2.d: "After long negotiations, another part of homeland returns under its true flag."
+ sov_dissolution.2.a: "One Step Closer"
+ sov_dissolution.3.t: "Russia asks to release a puppet"
+ sov_dissolution.3.d: "Russian state has reached out in hopes of negotiating a release of one of its ex-parts as fully independent nation."
+ sov_dissolution.3.a: "Money investment could be helpful"
+ sov_dissolution.3.b: "We could buy their state assets"
+ sov_dissolution.3.c: "Out of the question"
+ sov_dissolution.4.t: "[FROM.GetName] asks for monetary compensation"
+ sov_dissolution.4.d: "After reaching out to [FROM.GetNamewithFlag] regarding possible release of parts of country, they proposed monetary compensation for such action."
+ sov_dissolution.4.a: "Small price to pay"
+ sov_dissolution.4.b: "Not possible"
+ sov_dissolution.5.t: "[FROM.GetName] asks for state asset transfer"
+ sov_dissolution.5.d: "After reaching out to [FROM.GetNamewithFlag] regarding possible release of parts of country, they proposed transfer of state assets as compensation for such action."
+ sov_dissolution.5.a: "Small price to pay"
+ sov_dissolution.5.b: "Not possible"
+ sov_dissolution.6.t: "[FROM.GetName] denies possible negotiations"
+ sov_dissolution.6.d: "After reaching out to [FROM.GetNamewithFlag] regarding possible release of parts of country, they outright rejected any propositions. The situation remains tense and unstable."
+ sov_dissolution.6.a: "Arrogant fools!"
+ sov_dissolution.7.t: "[SOV.GetName] agrees to our terms"
+ sov_dissolution.7.d: "[SOV.GetName] agreed to our reasonable compensation demands for the release of our affiliated state."
+ sov_dissolution.7.a: "Just business"
+ sov_dissolution.8.t: "[SOV.GetName] rejects our terms"
+ sov_dissolution.8.d: "[SOV.GetName] rejected to consider our reasonable compensation demands for the release of our affiliated state."
+ sov_dissolution.8.a: "Their loss"
+ sov_dissolution.10.t: "Political turmoil during negotiations"
+ sov_dissolution.10.d: "While negotiating possible reintegration into the Russian state, some unpleasant topics were brought up, effectively stalling the negotiation process"
+ sov_dissolution.10.a: "Lets leverage some tools at disposal"
+ sov_dissolution.10.b: "We have to sit this one out"
+ sov_dissolution.11.t: "Lack of funds for negotiations"
+ sov_dissolution.11.d: "While negotiating possible reintegration into the Russian state, monetary compensation was brought up, as means to cover administrative costs of state transfer."
+ sov_dissolution.11.a: "Part of the process"
+ sov_dissolution.11.b: "There is no money - but you hang in there!"
+ sov_dissolution.12.t: "Incompatible state assets"
+ sov_dissolution.12.d: "While negotiating possible reintegration into the Russian state, it was brought up that some of state assets would go bankrupt, and now we have to make a move from our side to unstall the negotiations."
+ sov_dissolution.12.a: "Sell it, now."
+ sov_dissolution.12.b: "We need those assets"
+ SOV_reunification_plus_10: "§GThis will increase unification progress by 10§!"
+ SOV_reunification_plus_15: "§GThis will increase unification progress by 15§!"
+ SOV_reunification_plus_20: "§GThis will increase unification progress by 20§!"
+ SOV_reunification_minus_10: "§RThis will decrease unification progress by 10§!"
 
  pmc_african_corps_TT: "§Y[SOV.GetFlag]The Afrika Korps§! battalion is not §Ghired§!"
