New Add state related

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -67,10 +67,12 @@ v1.10.0
  Map:
   - Revamp Iran region
   - Revamp Somalia region
+  - Revamp Quebec and Greenland
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
   - Add Guardafui Channel
   - Grant a navy base for Lithuania
+  - Add Alaska railway
   - Minor adjustment
 
  Performance:
