Russian reunification fix
Switch SYB tag to ESB, and change related file
Redundant events remove
Error fix

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5251,37 +5251,37 @@
  CKK_nationalist_DEF: "Greater Chukotka"
  CKK_nationalist_ADJ: "Greater Chukotka"
 
- SYB_fascism: "Great Emirate of Syberia"
- SYB_fascism_DEF: "Great Emirate of Syberia"
- SYB_democratic: "Republic of Syberia"
- SYB_democratic_DEF: "Republic of Syberia"
- SYB_neutrality: "Republic of Syberia"
- SYB_neutrality_DEF: "Republic of Syberia"
- SYB_communism: "Republic of Syberia"
- SYB_communism_DEF: "Republic of Syberia"
- SYB_fascism_ADJ: "Syberian"
- SYB_democratic_ADJ: "Syberian"
- SYB_neutrality_ADJ: "Syberian"
- SYB_communism_ADJ: "Syberian"
- SYB_nationalist: "Greater State of Syberia"
- SYB_nationalist_DEF: "Greater State of Syberia"
- SYB_nationalist_ADJ: "Syberian"
+ ESB_fascism: "Great Emirate of Eastern Siberia"
+ ESB_fascism_DEF: "Great Emirate of Eastern Siberia"
+ ESB_democratic: "Republic of Eastern Siberia"
+ ESB_democratic_DEF: "Republic of Eastern Siberia"
+ ESB_neutrality: "Republic of Eastern Siberia"
+ ESB_neutrality_DEF: "Republic of Eastern Siberia"
+ ESB_communism: "Republic of Eastern Siberia"
+ ESB_communism_DEF: "Republic of Eastern Siberia"
+ ESB_fascism_ADJ: "Eastern Siberia"
+ ESB_democratic_ADJ: "Eastern Siberia"
+ ESB_neutrality_ADJ: "Eastern Siberia"
+ ESB_communism_ADJ: "Eastern Siberia"
+ ESB_nationalist: "Greater State of Eastern Siberia"
+ ESB_nationalist_DEF: "Greater State of Eastern Siberia"
+ ESB_nationalist_ADJ: "Eastern Siberia"
 
- CSB_fascism: "Great Emirate of Central Syberia"
- CSB_fascism_DEF: "Great Emirate of Central Syberia"
- CSB_democratic: "Republic of Central Syberia"
- CSB_democratic_DEF: "Republic of Central Syberia"
- CSB_neutrality: "Republic of Central Syberia"
- CSB_neutrality_DEF: "Republic of Central Syberia"
- CSB_communism: "Republic of Central Syberia"
- CSB_communism_DEF: "Republic of Central Syberia"
- CSB_fascism_ADJ: "Central-Syberian"
- CSB_democratic_ADJ: "Central-Syberian"
- CSB_neutrality_ADJ: "Central-Syberian"
- CSB_communism_ADJ: "Central-Syberian"
- CSB_nationalist: "Greater State of Central Syberia"
- CSB_nationalist_DEF: "Greater State of Central Syberia"
- CSB_nationalist_ADJ: "Central-Syberian"
+ CSB_fascism: "Great Emirate of Central Siberia"
+ CSB_fascism_DEF: "Great Emirate of Central Siberia"
+ CSB_democratic: "Republic of Central Siberia"
+ CSB_democratic_DEF: "Republic of Central Siberia"
+ CSB_neutrality: "Republic of Central Siberia"
+ CSB_neutrality_DEF: "Republic of Central Siberia"
+ CSB_communism: "Republic of Central Siberia"
+ CSB_communism_DEF: "Republic of Central Siberia"
+ CSB_fascism_ADJ: "Central-Siberian"
+ CSB_democratic_ADJ: "Central-Siberian"
+ CSB_neutrality_ADJ: "Central-Siberian"
+ CSB_communism_ADJ: "Central-Siberian"
+ CSB_nationalist: "Greater State of Central Siberia"
+ CSB_nationalist_DEF: "Greater State of Central Siberia"
+ CSB_nationalist_ADJ: "Central-Siberian"
 
  DON_fascism: "Great Emirate of Don"
  DON_fascism_DEF: "Great Emirate of Don"
@@ -5295,8 +5295,8 @@
  DON_democratic_ADJ: "Don"
  DON_neutrality_ADJ: "Don"
  DON_communism_ADJ: "Don"
- DON_nationalist: "Cossac's Don State "
- DON_nationalist_DEF: "Cossac's Don State"
+ DON_nationalist: "Cossacks' Don State"
+ DON_nationalist_DEF: "Cossacks' Don State"
  DON_nationalist_ADJ: "Don"
 
  KHM_fascism: "Great Emirate of Khanty-Mansi"
